<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_custom_off">Off</string>
    <string name="accessibility_custom_on">On</string>
    <string name="accessibility_custom_view">Accessibility/Custom View</string>
    <string name="accessibility_custom_view_instructions">"1. Enable TalkBack (Settings -> Accessibility -> TalkBack). 

2. Enable Explore-by-Touch (Settings -> Accessibility -> Explore by Touch). 

3. Touch explore/poke the buttons."</string>
    <string name="accessibility_node_provider">Accessibility/Accessibility Node Provider</string>
    <string name="accessibility_node_provider_instructions">Enable TalkBack and Explore-by-touch from accessibility settings. Then touch the colored squares.</string>
    <string name="accessibility_query_window">Accessibility/Accessibility Node Querying</string>
    <string name="accessibility_query_window_description">Task App Accessibility Service</string>
    <string name="action_bar_add">Add</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_sort">Sort</string>
    <string name="action_bar_sort_alpha">Alphabetically</string>
    <string name="action_bar_sort_size">By size</string>
    <string name="default_value_edittext_preference">Default value</string>
    <string name="default_value_list_preference">beta</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="lock_screen">Lock screen now</string>
    <string name="lock_wipe_category">Lock screen / Wipe</string>
    <string name="maximum_lock_time">Max time to screen lock (minutes)</string>
    <string name="maximum_password_fails">Max password failures for local wipe</string>
    <string name="password_controls_category">Password controls</string>
    <string name="password_expiration_category">Password history / Expiration</string>
    <string name="password_expiration_status">Password expiration status</string>
    <string name="password_expiration_timeout">Password expiration timeout (minutes)</string>
    <string name="password_history_depth">Password history depth</string>
    <string name="password_minimum_length">Minimum length</string>
    <string name="password_minimum_letters">Minimum letters</string>
    <string name="password_minimum_lower_case">Minimum lower case</string>
    <string name="password_minimum_non_letter">Minimum non-letter</string>
    <string name="password_minimum_numeric">Minimum numeric</string>
    <string name="password_minimum_symbols">Minimum symbols</string>
    <string name="password_minimum_upper_case">Minimum upper case</string>
    <string name="password_quality">Password quality</string>
    <string name="password_quality_category">Password quality</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="scroll_view_1_button_1">Button 1</string>
    <string name="scroll_view_1_button_2">Button 2</string>
    <string name="scroll_view_1_button_3">Button 3</string>
    <string name="scroll_view_1_button_4">Button 4</string>
    <string name="scroll_view_1_button_5">Button 5</string>
    <string name="scroll_view_1_button_6">Button 6</string>
    <string name="scroll_view_1_text_1">Text View 1</string>
    <string name="scroll_view_1_text_2">Text View 2</string>
    <string name="scroll_view_1_text_3">Text View 3</string>
    <string name="scroll_view_1_text_4">Text View 4</string>
    <string name="scroll_view_1_text_5">Text View 5</string>
    <string name="scroll_view_1_text_6">Text View 6</string>
    <string name="set_password_api">Set password (via API)</string>
    <string name="set_password_api_dialog">Set screen lock password to</string>
    <string name="set_password_user">Set password (user)</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="summary_child_preference">This is visually a child</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="summary_switch_preference">This is a switch</string>
    <string name="summary_switch_preference_yes_no">This is a switch with custom text</string>
    <string name="table_layout_1_open">Open…</string>
    <string name="table_layout_1_open_shortcut">Ctrl-O</string>
    <string name="table_layout_1_quit">Quit Application</string>
    <string name="table_layout_1_quit_shortcut">Ctrl-Shift-Q</string>
    <string name="table_layout_1_save">Save As…</string>
    <string name="table_layout_1_save_shortcut">(Save Document)</string>
    <string name="table_layout_1_star">*</string>
    <string name="table_layout_1_triple_star">***</string>
    <string name="table_layout_3_open">Open…</string>
    <string name="table_layout_3_open_shortcut">Ctrl-O</string>
    <string name="table_layout_3_quit">Quit Application</string>
    <string name="table_layout_3_quit_shortcut">Ctrl-Shift-Q</string>
    <string name="table_layout_3_save">Save As…</string>
    <string name="table_layout_3_save_shortcut">(Save Document)</string>
    <string name="table_layout_3_star">*</string>
    <string name="table_layout_3_too_long">Too Long</string>
    <string name="table_layout_3_triple_star">***</string>
    <string name="table_layout_5_export">Export…</string>
    <string name="table_layout_5_export_shortcut">Ctrl-E</string>
    <string name="table_layout_5_import">Import…</string>
    <string name="table_layout_5_open">Open…</string>
    <string name="table_layout_5_open_shortcut">Ctrl-O</string>
    <string name="table_layout_5_quit">Quit…</string>
    <string name="table_layout_5_save">Save…</string>
    <string name="table_layout_5_save_as">Save As…</string>
    <string name="table_layout_5_save_as_shortcut">Ctrl-Shift-S</string>
    <string name="table_layout_5_save_shortcut">Ctrl-S</string>
    <string name="table_layout_6_export">Export…</string>
    <string name="table_layout_6_export_shortcut">Ctrl-E</string>
    <string name="table_layout_6_import">Import…</string>
    <string name="table_layout_6_open">Open…</string>
    <string name="table_layout_6_open_shortcut">Ctrl-O</string>
    <string name="table_layout_6_quit">Quit…</string>
    <string name="table_layout_6_save">Save…</string>
    <string name="table_layout_6_save_as">Save As…</string>
    <string name="table_layout_6_save_as_shortcut">Ctrl-Shift-S</string>
    <string name="table_layout_6_save_shortcut">Ctrl-S</string>
    <string name="table_layout_6_x">X</string>
    <string name="table_layout_9_export">Export…</string>
    <string name="table_layout_9_export_shortcut">Ctrl-E</string>
    <string name="table_layout_9_import">Import…</string>
    <string name="table_layout_9_open">Open…</string>
    <string name="table_layout_9_open_shortcut">Ctrl-O</string>
    <string name="table_layout_9_save">Save…</string>
    <string name="table_layout_9_save_all">Save All And Do A Lot Of Stuff Just To Be Too Long For This Screen Because It Is A Test After All</string>
    <string name="table_layout_9_save_all_shortcut">Ctrl-E</string>
    <string name="table_layout_9_save_as">Save As…</string>
    <string name="table_layout_9_save_as_shortcut">Ctrl-Shift-S</string>
    <string name="table_layout_9_save_shortcut">Ctrl-S</string>
    <string name="table_layout_9_toggle_shrink">Toggle Shrink</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="title_edittext_preference">Edit text preference</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="title_list_preference">List preference</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="title_switch_preference">Switch preference</string>
    <string name="wipe_all_data">Wipe all data</string>
    <string name="wipe_all_data_summary">Wipe internal data and external storage</string>
    <string name="wipe_data">Wipe data</string>
    <string name="wipe_data_summary">Wipe internal data, like a factory reset</string>
</resources>