<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/inline_preferences">
        <CheckBoxPreference android:title="@string/title_checkbox_preference" android:key="checkbox_preference" android:summary="@string/summary_checkbox_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/dialog_based_preferences">
        <EditTextPreference android:title="@string/title_edittext_preference" android:key="edittext_preference" android:summary="@string/summary_edittext_preference" android:dialogTitle="@string/dialog_title_edittext_preference" />
        <ListPreference android:entries="@array/entries_list_preference" android:title="@string/title_list_preference" android:key="list_preference" android:summary="@string/summary_list_preference" android:dialogTitle="@string/dialog_title_list_preference" android:entryValues="@array/entryvalues_list_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/launch_preferences">
        <PreferenceScreen android:title="@string/title_screen_preference" android:key="screen_preference" android:summary="@string/summary_screen_preference">
            <CheckBoxPreference android:title="@string/title_next_screen_toggle_preference" android:key="next_screen_checkbox_preference" android:summary="@string/summary_next_screen_toggle_preference" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/title_intent_preference" android:summary="@string/summary_intent_preference">
            <intent android:action="android.intent.action.VIEW" android:data="http://www.android.com" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_attributes">
        <CheckBoxPreference android:title="@string/title_parent_preference" android:key="parent_checkbox_preference" android:summary="@string/summary_parent_preference" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/title_child_preference" android:key="child_checkbox_preference" android:summary="@string/summary_child_preference" android:dependency="parent_checkbox_preference" />
    </PreferenceCategory>
</PreferenceScreen>