<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/title_checkbox_preference" android:key="default_checkbox" android:summary="@string/summary_checkbox_preference" android:defaultValue="true" />
    <EditTextPreference android:title="@string/title_edittext_preference" android:key="default_edittext" android:summary="@string/summary_edittext_preference" android:defaultValue="@string/default_value_edittext_preference" android:dialogTitle="@string/dialog_title_edittext_preference" />
    <ListPreference android:entries="@array/entries_list_preference" android:title="@string/title_list_preference" android:key="default_list" android:summary="@string/summary_list_preference" android:defaultValue="@string/default_value_list_preference" android:dialogTitle="@string/dialog_title_list_preference" android:entryValues="@array/entryvalues_list_preference" />
</PreferenceScreen>