<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/lock_wipe_category" android:key="key_category_lock_wipe">
        <EditTextPreference android:title="@string/maximum_lock_time" android:key="key_max_time_screen_lock" android:dialogTitle="@string/maximum_lock_time" android:inputType="number" />
        <EditTextPreference android:title="@string/maximum_password_fails" android:key="key_max_fails_before_wipe" android:dialogTitle="@string/maximum_password_fails" android:inputType="number" />
        <PreferenceScreen android:title="@string/lock_screen" android:key="key_lock_screen" />
        <PreferenceScreen android:title="@string/wipe_data" android:key="key_wipe_data" android:summary="@string/wipe_data_summary" />
        <PreferenceScreen android:title="@string/wipe_all_data" android:key="key_wipe_data_all" android:summary="@string/wipe_all_data_summary" />
    </PreferenceCategory>
</PreferenceScreen>