<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TableLayout android:id="@id/menu" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TableRow>
                <TextView android:padding="3.0dip" android:text="@string/table_layout_9_open" android:contentDescription="@string/table_layout_9_open" />
                <TextView android:gravity="right" android:padding="3.0dip" android:text="@string/table_layout_9_open_shortcut" android:contentDescription="@string/table_layout_9_open_shortcut" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dip" android:text="@string/table_layout_9_save" android:contentDescription="@string/table_layout_9_save" />
                <TextView android:gravity="right" android:padding="3.0dip" android:text="@string/table_layout_9_save_shortcut" android:contentDescription="@string/table_layout_9_save_shortcut" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dip" android:text="@string/table_layout_9_save_as" android:contentDescription="@string/table_layout_9_save_as" />
                <TextView android:gravity="right" android:padding="3.0dip" android:text="@string/table_layout_9_save_as_shortcut" android:contentDescription="@string/table_layout_9_save_as_shortcut" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dip" android:text="@string/table_layout_9_save_all" android:contentDescription="@string/table_layout_9_save_all" />
                <TextView android:gravity="right" android:padding="3.0dip" android:text="@string/table_layout_9_save_all_shortcut" android:contentDescription="@string/table_layout_9_save_all_shortcut" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dip" android:text="@string/table_layout_9_import" android:contentDescription="@string/table_layout_9_import" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dip" android:text="@string/table_layout_9_export" android:contentDescription="@string/table_layout_9_export" />
                <TextView android:gravity="right" android:padding="3.0dip" android:text="@string/table_layout_9_export_shortcut" android:contentDescription="@string/table_layout_9_export_shortcut" />
            </TableRow>
        </TableLayout>
        <Button android:id="@id/toggle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/table_layout_9_toggle_shrink" android:contentDescription="@string/table_layout_9_toggle_shrink" />
    </LinearLayout>
</ScrollView>